--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,16 +1,8 @@
-<!Doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-</head>
-
-<body>
-    <form method="POST">
-        <input type="text" name="text">
-        <button type="submit">Submit</button>
-    </form>
-</body>
-
-</html>
+<%- include('layouts/header'); -%>
+<form method="post">
+    <input type="text" name="title">
+    <br>
+    <textarea cols="30" rows="7" name="body"></textarea>
+    <button type="submit">Submit</button>
+</form>
+<%- include('layouts/footer'); -%>
