--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="footer">
 <div class="container">footer</div>
 </footer>
-<script src="/javascripts/scripts.js"></script>
-<script src="/jquery.min.js"></script>
+<script src="<%= assetFingerprint('/javascripts/scripts.js') %>"></script>
+<script src="<%= assetFingerprint('/jquery.min.js') %>"></script>
 </body>
 
 </html>
