--- a/views/layouts/sidebar.ejs
+++ b/views/layouts/sidebar.ejs
@@ -34,7 +34,7 @@
       </div>
       <div class="buttons">
         <button class="switch-button secondary-inverse">Sign In</button>
-        <button class="login-button">Sign Up</button>
+        <button class="register-button">Sign Up</button>
       </div>
     </form>
 
