--- a/views/archive/index.ejs
+++ b/views/archive/index.ejs
@@ -21,7 +21,9 @@
           <%=posts[i].owner.login %>
         </a>
         </div>
-        <a href="/posts/<%=posts[i].url %>">Comments</a>
+        <a href="/posts/<%=posts[i].url %>#<%=posts[i].id %>">Comments:
+          <%=posts[i].commentCount %>
+        </a>
       </div>
     </div>
     <% } %>
